--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -77,15 +77,18 @@ ul li{
 
 .notification-count{
     position: absolute;
-    right: 0;
+    bottom: 12px;
+    left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #38b000;
     color: #fff;
-    font-size: 15px;
+    font-size: 12px;
     border: 2px solid #fff;
-    height: 20px;
-    width: 20px;
-    text-align: center;
-    border-radius: 10px;
+    height: 13px;
+    width: 13px;
+    border-radius: 13px;
 }
 
 .profile{
@@ -703,4 +706,170 @@ input[type=number] {
     margin: 0;
     width: 103px;
     height: 30px;
+}
+
+
+
+
+/* Section rental steps */
+.rental-steps{
+    margin-top: 40px;
+    padding: 0;
+    text-align: center;
+}
+
+.rental-steps h2{
+    font-size: 34px;
+    font-weight: 400;
+}
+
+.three-steps{
+    display: flex;
+    flex-direction: row;
+    column-gap: 50px;
+    justify-content: center;
+}
+
+.steps{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.step-id{
+    width: 64px;
+    height: 52px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    margin-bottom: 8px;
+    font-size: 40px;
+    color: #E21E26;
+}
+
+.step-block{
+    width: 348px;
+    height: 178px;
+    border: 2px solid #000;
+}
+
+.step-block img{
+    width: 46px;
+    height: 46px;
+    margin-top: 16px;
+}
+
+.step-block p{
+    font-size: 14px;
+}
+
+
+/* section avialable locations*/
+
+
+.avialable-locations{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
+    background-color: #000;
+    width: 100%;
+    height: 325px;
+    color: #fff;
+}
+
+.avialable-locations h2{
+    margin-top: 56px;
+    font-size: 34px;
+    font-weight: 300;
+    margin-bottom: 0;
+}
+
+.our-locations{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.our-locations .vertical-line{
+    height: 41px;
+    width: 1px;
+    background-color: #ffffff34;
+}
+
+.each-location{
+    width: 180px;
+    height: 29px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    column-gap: 19px;
+    margin-left: 34px;
+}
+
+.each-location img{
+    width: 22px;
+    height: 28px;
+}
+
+.each-location p{
+    font-size: 19px;
+    font-weight: 300;
+}
+
+
+
+/* FAQ section */
+.FAQ{
+    margin-top: 56px;
+    padding-right: 89px;
+    padding-left: 89px;
+}
+
+
+.faq-container {
+    margin: 0 auto;
+}
+
+h2 {
+    text-align: center;
+    font-size: 34px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+.faq-item {
+    border-bottom: 1px solid #e0e0e0;
+    padding: 15px 0;
+}
+
+.faq-question {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.faq-question span {
+    font-size: 16px;
+}
+
+.faq-toggle {
+    font-size: 24px;
+    font-weight: 300;
+}
+
+.faq-answer {
+    display: none;
+    padding: 10px 0;
+    color: #666;
+    font-size: 14px;
+}
+
+.faq-answer p {
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
