--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -524,25 +524,34 @@ option {
 .popular-cars {
     display: flex;
     flex-direction: row;
+    cursor: grab;
+    flex-wrap: nowrap;
     column-gap: 22px;
-    overflow: hidden;
-    width: 100%;
+    width: 100%; /* Make sure this width is fixed or relative to the viewport */
     position: relative;
-    height: 300px; /* Set a height to enable scrolling */
+    height: 300px;
+    overflow-x: auto; /* Ensure 'auto' to trigger scrolling when needed */
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch; /* For momentum scrolling on iOS */
+    scrollbar-width: none; /* Firefox - hide scrollbar */
+}
+
+.popular-cars::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera - hide scrollbar */
 }
 
 .card {
-    width: 754px;
+    min-width: 754px; /* Use min-width instead of width */
     height: 290px;
     background-color: #fff;
-    flex-shrink: 0;
     border: 1px solid #D9D9D9;
     display: flex;
     flex-direction: row;
     align-items: center;
-    cursor: grab;
     user-select: none;
+    scroll-snap-align: start;
 }
+
 
 .card img {
     width: 360px;
