Mobile view almost completed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1123,8 +1123,8 @@ h2 {
     body{
         padding: 0px 10px 0px 10px;
         margin: 0;
-        width: 110%;
-        overflow-x: hidden;
+        width: 100%;
+        overflow-x: hidden !important;
     }
 
 
@@ -1233,7 +1233,7 @@ h2 {
     }
 
     .slide-in-button-1,.slide-in-button-2{
-        left: calc(102dvw);
+        left: calc(100vw - 20px);
         z-index: 20;
         transition: width 0.4s ease, left 0.4s ease;
     }
@@ -1492,6 +1492,7 @@ h2 {
 
     /* Android app advertisement */
     .app-downloadLink{
+        justify-content: center;
         align-items: flex-start;
         height: 390px;
     }
@@ -1518,7 +1519,7 @@ h2 {
 
     /* mobile number input */
     .link-share input {
-        width: 180px;
+        width: 160px;
     }
 
     /* play store and app store liage */
@@ -1621,18 +1622,123 @@ h2 {
         text-align: left;
     }
 
+    /* faq question  */
     .faq-question{
         font-size: 13px;
     }
 
+    /* faq answer  */
     .faq-answer{
         font-size: 12px;
         padding: 5px 0 5px 0;
     }
 
+
+    /* footer hided for the mobile view  */
     .footer{
         display: none;
+        
     }
+
+    /* mobile ffoter */
+    .mobile-footer{
+        justify-content: center;
+        display: flex !important;
+        flex-direction: column;
+    }
+
+    /* mobile footer light color section */
+    .footer-half-color{
+        background-color: #F6F7F9;
+        display: flex;
+        flex-direction: column;
+        margin-top: 50px;
+        padding: 20px;
+        width: 100dvw;
+        position: relative;
+        align-items: center;
+        left: -20px;
+    }
+
+    /* heading of footer */
+    .footer-half-color .footer-heading{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        column-gap: 100px;
+    }
+
+    /* social media link list */
+    .social-media-mobile{
+        column-gap: 10px;
+    }
+
+    /* navigation list section */
+    .footer-nav-list li a{
+        text-decoration: none;
+        color: #000;
+        font-size: 10px;
+        font-weight: 500;
+    }
+
+
+    .footer-nav-list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 0px;
+    }
+
+    .footer-nav-list li{
+        flex: 0 0 calc(25% - 10px);
+        font-size: 12px;
+        font-weight: 700;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    /* footer dark color section */
+    .black-color{
+        background-color: #000;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        width: 100dvw;
+        position: relative;
+        align-items: center;
+        left: -20px;
+    }   
+
+    .parent-company-heading{
+        font-size: 13px;
+        font-weight: 700;
+    }
+
+    .company-list-mobile{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .company-list-mobile li a{
+        text-decoration: none;
+        color: #fff;
+        font-size: 13px;
+        font-weight: 400;
+        flex: 0 0 calc(25% - 10px);
+    }
+
+    .black-color img{
+        margin-bottom: 20px;
+    }
+
 
     
 
